--- a/assets/gamepage.html
+++ b/assets/gamepage.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-80" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="./gamepage.css"/>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"/> -->
     <title>Blackjack with Crypto</title>
 
 </head>
 
 <body>
-    <header>
-        <h1>Blackjack</h1>
-        <p>Gains</p>
-    </header>
+  <header>
+    <h1>Black Jack</h1>
+  </header>
 
     <!--Modal from bulma-->
     <!--Use for the start of the game -->
@@ -27,12 +26,12 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <!-- Content ... -->
+               <p>Select betting amount</p> 
             </section>
             <footer class="modal-card-foot">
                 <div class="buttons">
-                    <button class="button is-success">Save changes</button>
-                    <button class="button">Cancel</button>
+                    <button class="button">Stand</button>
+                    <button class="button">Hit</button>
                 </div>
             </footer>
         </div>
@@ -40,7 +39,7 @@
 
     <!--TO DO: Style the cards and figure out what images or content to use-->
    <!-- Building cards 
-    <section>
+    <section class="card-format">
         opponent cards 
         <div class="card">
             <div class="card-image">
