added basic structure to HTML and styling to CSS

--- a/assets/gamepage.html
+++ b/assets/gamepage.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-80" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./gamepage.css"/>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"/> -->
-    <title>Blackjack with Crypto</title>
+  <meta charset="UTF-80" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./gamepage.css" />
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"/> -->
+  <title>Blackjack with Crypto</title>
 
 </head>
 
@@ -15,89 +15,80 @@
     <h1>Black Jack</h1>
   </header>
 
-    <!--Modal from bulma-->
-    <!--Use for the start of the game -->
-    <!--TODO: add content for the betting intially to the modal and edit it-->
-    <div class="modal">
-        <div class="modal-background"></div>
-        <div class="modal-card">
-            <header class="modal-card-head">
-                <p class="modal-card-title">Modal title</p>
-                <button class="delete" aria-label="close"></button>
-            </header>
-            <section class="modal-card-body">
-               <p>Select betting amount</p> 
-            </section>
-            <footer class="modal-card-foot">
-                <div class="buttons">
-                    <button class="button">Stand</button>
-                    <button class="button">Hit</button>
-                </div>
-            </footer>
+  <!--Modal from bulma-->
+  <!--Use for the start of the game -->
+  <!--TODO: add content for the betting intially to the modal and edit it-->
+  <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Modal title</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <p>Select betting amount</p>
+      </section>
+      <footer class="modal-card-foot">
+        <div class="buttons">
+          <button class="button">Stand</button>
+          <button class="button">Hit</button>
         </div>
+      </footer>
+    </div>
+  </div>
+
+  <!--TO DO: Style the cards and figure out what images or content to use-->
+  <!-- Building cards -->
+  <section class="card-format">
+    opponent cards
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
+        </figure>
+      </div>
     </div>
 
-    <!--TO DO: Style the cards and figure out what images or content to use-->
-   <!-- Building cards 
-    <section class="card-format">
-        opponent cards 
-        <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img
-                  src="https://unsplash.com/s/photos/playing-cards"
-                  alt="Placeholder image"
-                />
-              </figure>
-            </div>
-          </div>
+    TODO: display the deck in the middle between the user and opponent
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
+        </figure>
+      </div>
+    </div>
 
-          TODO: display the deck in the middle between the user and opponent
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img
-                  src="https://unsplash.com/s/photos/playing-cards"
-                  alt="Placeholder image"
-                />
-              </figure>
-            </div>
-          </div>
-
-          user cards
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img
-                  src="https://unsplash.com/s/photos/playing-cards"
-                  alt="Placeholder image"
-                />
-              </figure>
-            </div>
-          </div>
+    user cards
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
+        </figure>
+      </div>
+    </div>
 
 
-    </section> -->
+  </section>
 
 
-    <!--Money tab-->
-    <aside>
-        <!--TODO: Insert starting balance and coins-->
-        <div class="card">
-            <div class="card-content">
-              <div class="content">
-                <!--TODO: Need to format/style these buttons-->
-                <form>
-                    <button>Stand</button>
-                    <button>Hit</button>
-                    <button>x2</button>
-                </form>
-              </div>
-            </div>
-          </div>
+  <!--Money tab-->
+  <aside>
+    <!--TODO: Insert starting balance and coins-->
+    <div class="card">
+      <div class="card-content">
+        <div class="content">
+          <!--TODO: Need to format/style these buttons-->
+          <form>
+            <button>Stand</button>
+            <button>Hit</button>
+            <button>x2</button>
+          </form>
+        </div>
+      </div>
+    </div>
 
-    </aside>
-    
+  </aside>
+
 </body>
 
 </html>
