--- a/assets/gamepage.html
+++ b/assets/gamepage.html
@@ -2,86 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-80" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./gamepage.css" />
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"/> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css" />
   <title>Blackjack with Crypto</title>
 
 </head>
 
 <body>
-  <header>
+  <header class="title">
     <h1>Black Jack</h1>
   </header>
 
-  <!--Modal from bulma-->
-  <!--Use for the start of the game -->
-  <!--TODO: add content for the betting intially to the modal and edit it-->
-  <div class="modal">
+
+  <!--Use moda for the start of the game -->
+  <!--TODO: Add trigger to modal to close upon clicking buttons-->
+  <!-- <div class="modal is-active">
     <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
-        <p class="modal-card-title">Modal title</p>
-        <button class="delete" aria-label="close"></button>
+        <p class="modal-card-title">Make your bet!</p>
+        <p class="modal-card-title">Balance: $1000</p> TODO: Make this amount go down at you select buttons
       </header>
       <section class="modal-card-body">
-        <p>Select betting amount</p>
+        <p>Select betting amount.</p>
       </section>
       <footer class="modal-card-foot">
         <div class="buttons">
-          <button class="button">Stand</button>
-          <button class="button">Hit</button>
+          <button class="button">$10</button>
+          <button class="button">$50</button>
+          <button class="button">$100</button>
+          <button class="button">$500</button>
         </div>
       </footer>
     </div>
+  </div> -->
+
+  <!-- TODO: adding spacing to the cards -->
+  <!-- Computer cards -->
+  <div class="columns is-centered">
+    <div class="columns is-half">
+      <div class="card">
+        <div class="card-image">
+          <figure>
+            <img class="image is-2by3" src="https://www.deckofcardsapi.com/static/img/back.png"
+              alt="Placeholder image" />
+          </figure>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <!--TO DO: Style the cards and figure out what images or content to use-->
-  <!-- Building cards -->
-  <section class="card-format">
-    opponent cards
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
-        </figure>
+
+  <!--Deck cards-->
+  <div class="columns is-centered">
+    <div class="columns is-half">
+      <div class="card">
+        <div class="card-image">
+          <figure>
+            <img class="image is-2by3" src="https://www.deckofcardsapi.com/static/img/back.png"
+              alt="Placeholder image" />
+          </figure>
+        </div>
       </div>
     </div>
+  </div>
 
-    TODO: display the deck in the middle between the user and opponent
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
-        </figure>
+  <!-- User cards -->
+  <div class="columns is-centered">
+    <div class="columns is-half">
+      <div class="card">
+        <div class="card-image">
+          <figure>
+            <img class="image is-2by3" src="https://www.deckofcardsapi.com/static/img/back.png"
+              alt="Placeholder image" />
+          </figure>
+        </div>
       </div>
     </div>
+  </div>
 
-    user cards
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="https://unsplash.com/s/photos/playing-cards" alt="Placeholder image" />
-        </figure>
-      </div>
-    </div>
-
-
-  </section>
 
 
   <!--Money tab-->
   <aside>
-    <!--TODO: Insert starting balance and coins-->
+    <!--TODO: Finish styling content and card size while also have the balance change-->
     <div class="card">
       <div class="card-content">
         <div class="content">
-          <!--TODO: Need to format/style these buttons-->
+          <p class="title">Balance: $1000</p>
+          <p>Choose one of below:</p>
           <form>
-            <button>Stand</button>
-            <button>Hit</button>
-            <button>x2</button>
+            <button class="button">Stand</button>
+            <button class="button">Hit</button>
+            <button class="button">x2</button>
           </form>
         </div>
       </div>
