--- a/gamepage.html
+++ b/gamepage.html
@@ -10,38 +10,19 @@
 
 </head>
 
-<body class="is-flex is-flex-direction-row is-justify-content-space-between mx-3">
-    <!--Use modal for the start of the game -->
-    <!--TODO: Add trigger to modal to close upon clicking buttons-->
-    <!-- <div class="modal is-active">
-    <div class="modal-background"></div>
-    <div class="modal-card">
-      <header class="modal-card-head">
-        <p class="modal-card-title">Make your bet!</p>
-        <p class="modal-card-title">Balance: $1000</p> TODO: Make this amount go down at you select buttons
-      </header>
-      <section class="modal-card-body">
-        <p>Select betting amount.</p>
-      </section>
-      <footer class="modal-card-foot">
-        <div class="buttons">
-          
-        </div>
-      </footer>
-    </div>
-  </div> -->
+<body class="is-flex is-flex-direction-row is-justify-content-space-between">
 
     <!--Money and Button tab-->
-    <aside class="mt-3">
-        <div class="card">
+    <aside class="is-flex is-flex-direction-column is-justify-content-space-between">
+        <div class="card mx-3">
             <div class="card-content">
                 <div class="content">
                     <p class="title">Balance: $1000</p>
                     <form>
-                        <button class="button">$10</button>
-                        <button class="button">$50</button>
-                        <button class="button">$100</button>
-                        <button class="button">$500</button>
+                        <button class="button is-medium">$10</button>
+                        <button class="button is-medium">$50</button>
+                        <button class="button is-medium">$100</button>
+                        <button class="button is-medium">$500</button>
                     </form>
                 </div>
             </div>
@@ -49,14 +30,14 @@
 
 
 
-        <div class="card">
+        <div class="card mx-3">
             <div class="card-content">
                 <div class="content">
                     <p class="title">Choose one of below:</p>
                     <form>
-                        <button class="button">Stand</button>
-                        <button id="draw-a-card-button" class="button">Hit</button>
-                        <button class="button">x2</button>
+                        <button class="button is-medium">Stand</button>
+                        <button id="draw-a-card-button" class="button is-medium">Hit</button>
+                        <button class="button is-medium">x2</button>
                     </form>
                 </div>
             </div>
@@ -67,44 +48,34 @@
 
 
     <section>
-        <!-- TODO: adding spacing to the cards -->
         <!-- Computer cards -->
-        <div class="is-centered playing-cards">
-            <div class="card">
-                <div class="card-image">
-                    <figure>
-                        <div id="dealer-cards-container">
-                            <!--Example, TODO: remove once implemented.-->
-                            <h2>Dealer Cards: 20</h2>
-                            <img src=https://deckofcardsapi.com/static/img/0H.png>
-                            <img src=https://deckofcardsapi.com/static/img/QH.png>
-                        </div>
-                    </figure>
-                </div>
+        <div class="is-centered playing-cards mx-3 my-3">
+
+            <div id="dealer-cards-container" >
+                <!--Example, TODO: remove once implemented.-->
+                <h2>Dealer Cards: 20</h2>
+                <img src=https://deckofcardsapi.com/static/img/0H.png>
+                <img src=https://deckofcardsapi.com/static/img/QH.png>
+                <img src=https://deckofcardsapi.com/static/img/QH.png>
+                <img src=https://deckofcardsapi.com/static/img/QH.png>
+                <img src=https://deckofcardsapi.com/static/img/QH.png>
             </div>
+
+
         </div>
 
         <!-- User cards -->
-        <div class="is-centered playing-cards">
-            <div class="card">
-                <div class="card-image">
-                    <figure>
-                        <div id="player-cards-container">
-                            <!--Example, TODO: remove once implemented.-->
-                            <h2>Player Cards: 12</h2>
-                            <img src=https://deckofcardsapi.com/static/img/5D.png>
-                            <img src=https://deckofcardsapi.com/static/img/7H.png>
-                        </div>
-                    </figure>
-                </div>
+        <div class="is-centered playing-cards mx-3 my-3">
+
+            <div id="player-cards-container">
+                <!--Example, TODO: remove once implemented.-->
+                <h2>Player Cards: 12</h2>
+                <img src=https://deckofcardsapi.com/static/img/5D.png>
+                <img src=https://deckofcardsapi.com/static/img/7H.png>
             </div>
+
         </div>
     </section>
-
-
-
-
-
 
 </body>
 
