added another card to contain betting amount

--- a/gamepage.html
+++ b/gamepage.html
@@ -12,22 +12,28 @@
 
 <body class="is-flex is-flex-direction-row is-justify-content-space-between">
 
-    <!--Money and Button tab-->
+    <!--Balance, Score, and Money Cards-->
     <aside class="is-flex is-flex-direction-column is-justify-content-space-between">
         <div class="card mx-3">
             <div class="card-content">
                 <div class="content">
                     <p class="title">Balance: $1000</p>
-                    <form>
-                        <button class="button is-medium">$10</button>
-                        <button class="button is-medium">$50</button>
-                        <button class="button is-medium">$100</button>
-                        <button class="button is-medium">$500</button>
-                    </form>
+                    <p class="title">Score: 0</p>
                 </div>
             </div>
         </div>
 
+        <div class="card mx-3">
+            <div class="card-content">
+                <div class="content">
+                    <p class="title">Select bet amount:</p>
+                    <button class="button">$10</button>
+                    <button class="button">$50</button>
+                    <button class="button">$100</button>
+                    <button class="button">$1000</button>
+                </div>
+            </div>
+        </div>
 
 
         <div class="card mx-3">
