Slight edits to readme and html, also renamed 2 files - still awaiting final page screenshots to complete readme.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./assets/css/style.css"> 
+  <link rel="stylesheet" href="./assets/css/landing.css"> 
 </head>
 <body>
   <header>
@@ -34,7 +34,7 @@
           <li>Card values: Numbered as given value, face cards as 10, ace as 1 or 11</li>
           <li>Objective: Beat the dealer by getting Blackjack (21), having a higher card count than the dealer without exceeding 21, or the dealer busting</li>
           <li>Player places a bet before the hand by clicking 'bet'; bet is set when 'deal' is clicked</li>  
-          <li>Both player and dealer receive two cards; player decides to "hit", "stand", or "x2"</li>
+          <li>Both player and dealer receive two cards; player decides to "Hit", "Stand", or "x2"</li>
         </ul>
         <br>
         <p>No actual bets are placed when playing this game. There is no potential for monetary risk or gain. It is purely for fun.</p>
