Gameplay is mostly working, aces aren't being handled correctly. That's next to fix.

--- a/gamepage.html
+++ b/gamepage.html
@@ -25,18 +25,6 @@
 
         <div class="card mx-3">
             <div class="card-content">
-                <div class="content">
-                    <p class="title">Select bet amount:</p>
-                    <button class="button">$10</button>
-                    <button class="button">$50</button>
-                    <button class="button">$100</button>
-                    <button class="button">$1000</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="card mx-3">
-            <div class="card-content">
                 <div class="content" id="bet-container">
                     <p class="title">Place your bet!</p>
                     <form id="bet-form">
@@ -51,9 +39,9 @@
 
 
         <div class="card mx-3">
-            <div class="card-content">
-                <div class="content" id="player-action-container">
-                    <p class="title">Choose one:</p>
+            <div class="card-content player-action-container-hidden" id="player-action-container">
+                <div class="content">
+                    <p class="title">Choose your fate</p>
                     <form id="player-action-form">
                         <button class="button is-medium" id="stand-button">Hodl</button>
                         <button class="button is-medium" id="hit-button">Buy the Dip</button>
@@ -72,13 +60,13 @@
         <div class="is-centered playing-cards mx-3 my-3">
 
             <div id="dealer-cards-container" >
-                <!--Example, TODO: remove once implemented.-->
+                <!--Example, TODO: remove once implemented.
                 <h2>Dealer Cards: 20</h2>
                 <img src=https://deckofcardsapi.com/static/img/0H.png>
                 <img src=https://deckofcardsapi.com/static/img/QH.png>
                 <img src=https://deckofcardsapi.com/static/img/QH.png>
                 <img src=https://deckofcardsapi.com/static/img/QH.png>
-                <img src=https://deckofcardsapi.com/static/img/QH.png>
+                <img src=https://deckofcardsapi.com/static/img/QH.png>-->
             </div>
 
 
@@ -88,13 +76,14 @@
         <div class="is-centered playing-cards mx-3 my-3">
 
             <div id="player-cards-container">
-                <!--Example, TODO: remove once implemented.-->
+                <!--Example, TODO: remove once implemented.
                 <h2>Player Cards: 12</h2>
                 <img src=https://deckofcardsapi.com/static/img/5D.png>
-                <img src=https://deckofcardsapi.com/static/img/7H.png>
+                <img src=https://deckofcardsapi.com/static/img/7H.png>-->
             </div>
 
         </div>
+
     </section>
 
 </body>
